styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
body{
    background-color: #161a1d;
    position: relative;
}
.title{
    color: #52b788;
    font-size:  2rem;
  text-shadow: -1px 0 #1d2a10, 0 1px #1d2a10, 1px 0 #1d2a10, 0 -1px #1d2a10;
  font-family: "Gelasio", serif;
  font-style: normal;

}
.title-span{
    font-size: 0.6rem;
    opacity: 0.5;
    
    font-family: "Gelasio", serif;
    font-style: normal;
}
.nav-link{
    color: #52b788 ;
   
    font-family: "Gelasio", serif;
    font-style: normal;
}
.navbar{
   
    font-family: "Gelasio", serif;
    font-style: normal;
}

.div-info{
   
    color: white !important;
    opacity: 1;
    width: 100vw;
    display: block !important;
    font-size: 1rem;
    font-family: "Gelasio", serif;
    font-style: normal;
}
.div-info h2,p{
     margin-left: 1%;
}

#about-me-p{
  opacity: 0.7;
  text-align: justify;
}

.div-info h2{
  color: #74c69d;
}

.about-me{

    margin-top: 3.5%;
  
}

.about-me-img{
  display: flex !important;
  align-items: center !important;
  width: 90vw;
}
#profile-pic2{
  width: 7vw;
  margin-left: 1%;
  margin-bottom: 1%;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

#profile-pic2:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}


 hr{
  width: 101vw;
  margin: 10px -20px 20px;
}

.container-cards{
  width: 100vw;
  text-align: left;
}

.card-project {
    margin-top: 10px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 100vw;
    margin-right: 2%;
 
    font-family: "Gelasio", serif;
    font-style: normal;
  }

  .card-date{
    font-size: 0.5rem;
  }

.card-project img {
    width: 100vw;
    height: 150px;
  
}

.card-project h4{
    font-size: 0.6rem;
    padding-top: 2px;
}


  
.card-project:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}
  
.container-card {
    padding: 2px 16px;
}



.button {
    display: inline-block;
    border-radius: 4px;
    background-color: #80ed99;
    border: none;
    color: #FFFFFF;
    text-align: center;
    font-size: 0.7rem;
    width: 33%;
    height: 30px;
    transition: all 0.5s;
    cursor: pointer;
    margin: 5px;

    font-family: "Gelasio", serif;
    font-style: normal;
   margin-bottom: 10%;
  }

 
  
  .button span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
  }

  
  .button span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
  }
  
  .button:hover span {
    padding-right: 25px;
  }
  
  .button:hover span:after {
    opacity: 1;
    right: 0;
  }

.skills span{
    margin-left: 1%;
}

#email-lowercase{
    text-transform: lowercase !important;
}

.container-footer{
    max-width: 1170px;
    margin:auto;
    
  }
  .row-footer{
    display: flex;
    flex-wrap: wrap;
  }
  ul{
    list-style: none;
    padding-left: 0px;
  }
  .footer{
    background-color: #24262b;
      padding: 50px 0;
  }
  .footer-col{
     width: 25vw;
     padding: 0 15px;
     margin-left: auto;
    margin-right: auto;
  }
  .footer-col h4{
    font-size: 18px;
    color: #ffffff;
    text-transform: capitalize;
    margin-bottom: 35px;
    font-weight: 500;
    position: relative;
  }
 
 
  .footer-col h4::before{
    content: '';
    position: absolute;
    left:0;
    bottom: -10px;
    background-color: #52b788;
    height: 2px;
    box-sizing: border-box;
    width: 50px;
  }
  .footer-col ul li:not(:last-child){
    margin-bottom: 10px;
  }
  .footer-col ul li a{
    font-size: 16px;
    text-transform: capitalize;
    color: #ffffff;
    text-decoration: none;
    font-weight: 300;
    color: #bbbbbb;
    display: block;
    transition: all 0.3s ease;
    
  }


  .footer-col ul li a:hover{
    color: #52b788;
    padding-left: 8px;
  }
  .footer-col .social-links a{
    display: inline-block;
    height: 40px;
    width: 40px;
    background-color: rgba(255,255,255,0.2);
    margin:0 10px 10px 0;
    text-align: center;
    line-height: 40px;
    border-radius: 50vw;
    color: #ffffff;
    transition: all 0.5s ease;
  }
  .footer-col .social-links a:hover{
    color: #24262b;
    background-color: #ffffff;
  }
 
 
  
.education{
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 70vw;
  margin-left: auto;
  margin-right: auto;
  font-family: "Gelasio", serif;
  font-style: normal;
  display: flex;
  align-items: center;
}
.education img {
  width: 10vw;
  height: 100px;

  max-width: 100%;
}
.education-desc{
  font-size: 0.7rem;
  opacity: 0.7;
}
.education-desc a{
  color: #80ed99;
  opacity: 1;
}

.education-title{
  color: #95d5b2;
}

.education-desc a:hover{
  color: forestgreen;
}

.education:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.info-education{
    font-size: 1rem;
}
  
.title-game{
  text-align: center;
  color: white;
  font-family: "Gelasio", serif;
  font-style: normal;
  margin-top: 5px;
}

.game-div-container{
  display: block !important;
}

.game-div{
  margin-top: 0px;
  width: 99vw;
  font-family: "Gelasio", serif;
  font-style: normal;
  display: flex;
  align-items: center;
  height: 100px;
}

.image-game{
  width: 11vw;
  margin-left: 2%;
  margin-top: 5%;
  max-width: 100%;
  border-radius: 20px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

.image-game:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.p-game{

  opacity: 0.6;
  margin-top: 0px;
  font-size: 1rem;
}

.game-span{
  color: #95d5b2;
  opacity: 1 !important;
  
}


#game-a{
  color: #80ed99;
}

#game-a:hover{
  color: #74c69d;
}

#game-a::after{
  color: #80ed99;
}

.credits{
  width: 8vw;
  
  margin-top: 7%;
  margin-left: 3%;


}

.credits-h2{
  font-family: "Gelasio", serif;
  font-style: normal;
  color: #52b788;
  font-size: 1rem;
  text-align: center;
}

.info-game{
  font-size: 0.8rem;
  color:khaki;
}

.game-list{
  font-size: 0.7rem;
  color: white;
  margin-left: 3%;
}

.container-credits{
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
 
}
.video-div{

  flex: 1;
  width: 100%;
  text-align: center;
}



.video-div iframe{
  max-width: 100%;
  border-radius: 10px;  
}

.video-div iframe:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.java-span{
    color: #dddf00;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}

#javaspan2{
  font-size: 0.6rem !important;
}
.html-span{
    color: #fb8500;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.css-span{
    color: #00b4d8;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.javascript-span{
    color: #ffc300;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.php-span{
    color: #b8c0ff;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.sql-span{
    color: #4361ee;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.cplus-span{
    color: #bde0fe;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.intellij-span{
    color: #ff4d6d;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.visual-studio-span{
    color: #0096c7;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.linux-span{
    color: #f4a261;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.windows-span{
    color: #90e0ef;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.netbeans-span{
    color: #b5e48c;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.cisco-span{
    color: #e5383b;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.ssh-span{
    color: white;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.http-span{
    color: #ade8f4;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.wordpress-span{
    color: #82c0cc;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.git-span{
    color: #fb5607;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.firebase-span{
    color: #ffba08;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.wireshark-span{
    color: #0077b6;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.office-span{
    color: #d8572a;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.docker-span{
    color: #48cae4;
    font-family: "Press Start 2P", system-ui;
    font-style: normal;
    font-size: 0.8rem;
}
.container-titles{
    color: lightgreen !important;
}


  
  /*responsive*/
  @media(max-width: 767px){
    .footer-col{
      width: 50%;
      margin-bottom: 30px;
      
  }
  #profile-pic2{
    width: 10vw;
  }
  #about-me-div{
    width: 100vw;
    margin-left: auto;
    margin-right: auto;
    font-size: 0.5rem;
  }
  }
  @media(max-width: 574px){
    .footer-col{
      width: 100vw;
  }
  #profile-pic2{
    width: 10vw;

  }
  .about-me-img{
    display: inline;
  }
  #about-me-div{
    width: 100vw;
    margin-left: auto;
    margin-right: auto;
    font-size: 0.7rem;
  }
  hr{
    width: 100vw;
  }
  .skills{
    width: 100vw;
    
  }
  .container-span{
    
    width: 100vw;
  }
  span{
    font-size: 0.5rem !important;
    width: 100vw;
  }
  .navbar{
    width: 100vw;
  }
  .button span{
    text-align: center;
  }
  .card-project{
    width: 70vw;
    margin-left: auto;
    margin-right: auto;
  }
  .education{
    width: 80vw;
  }
  .div-info{
    width: 100vw;
  }
  #skills{
    width: 100vw;
  }
  .title{
    font-size: 1rem;
  }
  html{
    width: 100vw;
  }

  }

